implemented cards draw logic and controller logic